# Compiler-optimizations

./: .clang-format  CMakeLists.txt  README.md  basic_block.cpp  basic_block.h  compiler_opt.cpp  compiler_opts.cpp  graph.h  inst.cpp  inst.h  opcode.h  utils.h
ir/: CMakeLists.txt  README.md  basic_block.cpp  basic_block.h  graph.cpp  graph.h  inst.cpp  inst.h  ir_builder.cpp  ir_builder.h  live_interval.h  liveness_info.h  loop.h  marker.h  opcode.h  utils.cpp  utils.h
optimizations/: CMakeLists.txt  pass_manager.cpp  pass_manager.h
pass/: CMakeLists.txt  check_elimination.cpp  check_elimination.h  const_folding.cpp  const_folding.h  dce.cpp  dce.h  dom_tree_fast.cpp  dom_tree_fast.h  dom_tree_slow.cpp  dom_tree_slow.h  inlining.cpp  inlining.h  linear_order.cpp  linear_order.h  liveness_analysis.cpp  liveness_analysis.h  loop_analyzer.cpp  loop_analyzer.h  pass.h  pass_manager.h  peephole.cpp  peephole.h  reg_alloc.cpp  reg_alloc.h  rpo.cpp  rpo.h  visitor.h
tests/: CMakeLists.txt  check_elimination_test.cpp  const_folding_test.cpp  dominator_test.cpp  graph_test.cpp  graph_test.h  inline_test.cpp  ir_test.cpp  linear_order_test.cpp  liveness_test.cpp  loop_test.cpp  peephole_test.cpp  reg_alloc_test.cpp
